syntax = "proto3";

package proto;
option go_package = "github.com/michaelkleyn/grpc-job-queue/proto";

service JobQueue {
  rpc SubmitJob (JobRequest) returns (JobResponse);
  rpc GetJobStatus (JobStatusRequest) returns (JobStatusResponse);
}

message JobRequest {
  string job_id = 1;
  string payload = 2;
}

message JobResponse {
  string job_id = 1;
  string message = 2;
}

message JobStatusRequest {
  string job_id = 1;
}

message JobStatusResponse {
  string job_id = 1;
  string status = 2;
}

